--- a/index.html
+++ b/index.html
@@ -3,43 +3,87 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Offline Walkie-Talkie</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Walkie-Talkie Login</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+        }
+
+        #container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+        }
+
+        #login-box {
+            background-color: #fff;
+            border: 1px solid #ccc;
+            padding: 20px;
+            border-radius: 5px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            max-width: 300px;
+        }
+
+        h1 {
+            text-align: center;
+        }
+
+        input[type="text"] {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 10px;
+            border: 1px solid #ccc;
+            border-radius: 3px;
+        }
+
+        button {
+            width: 100%;
+            padding: 10px;
+            background-color: #007bff;
+            color: #fff;
+            border: none;
+            border-radius: 3px;
+            cursor: pointer;
+        }
+
+        button:hover {
+            background-color: #0056b3;
+        }
+    </style>
 </head>
 <body>
-    <div class="app">
-        <div class="controls">
-            <div class="user">
-                <label for="phoneNumber">Phone Number:</label>
-                <input type="text" id="phoneNumber" placeholder="Enter phone number...">
-                <button id="registerUser">Register</button>
-            </div>
-            <div class="room">
-                <label for="roomName">Room Name:</label>
-                <input type="text" id="roomName" placeholder="Enter room name...">
-                <button id="createRoom">Create Room</button>
-            </div>
-            <div class="join-room">
-                <label for="joinPhoneNumber">Join a Room by Phone Number:</label>
-                <input type="text" id="joinPhoneNumber" placeholder="Enter phone number...">
-                <button id="joinRoom">Join</button>
-            </div>
-        </div>
-        <div class="walkie-talkie">
-            <div class="receiver">
-                <div class="speaker"></div>
-                <div class="display">
-                    <p id="message">Listening for messages...</p>
-                </div>
-            </div>
-            <div class="transmitter">
-                <div class="microphone">
-                    <button id="startRecord">Hold to Record</button>
-                    <button id="stopRecord" disabled>Release to Send</button>
-                </div>
-            </div>
+    <div id="container">
+        <div id="login-box">
+            <h1>Walkie-Talkie Login</h1>
+            <input type="text" id="phone-number" placeholder="Enter your phone number">
+            <button id="login-button">Login</button>
         </div>
     </div>
-    <script src="script.js"></script>
+
+    <script>
+        const phoneNumberInput = document.getElementById('phone-number');
+        const loginButton = document.getElementById('login-button');
+
+        loginButton.addEventListener('click', () => {
+            const phoneNumber = phoneNumberInput.value.trim();
+            if (phoneNumber !== '') {
+                // Assuming successful login, collect phone numbers and save to info.js
+                const phoneNumbers = JSON.parse(localStorage.getItem('phoneNumbers')) || [];
+                phoneNumbers.push(phoneNumber);
+                savePhoneNumbers(phoneNumbers);
+
+                // Redirect to main.html
+                window.location.href = 'main.html';
+            }
+        });
+
+        // Save phone numbers to info.js
+        function savePhoneNumbers(phoneNumbers) {
+            localStorage.setItem('phoneNumbers', JSON.stringify(phoneNumbers));
+        }
+    </script>
 </body>
 </html>
