--- a/index.html
+++ b/index.html
@@ -4,55 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Walkie-Talkie Login</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-        }
-
-        #container {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-        }
-
-        #login-box {
-            background-color: #fff;
-            border: 1px solid #ccc;
-            padding: 20px;
-            border-radius: 5px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            max-width: 300px;
-        }
-
-        h1 {
-            text-align: center;
-        }
-
-        input[type="text"] {
-            width: 100%;
-            padding: 10px;
-            margin-bottom: 10px;
-            border: 1px solid #ccc;
-            border-radius: 3px;
-        }
-
-        button {
-            width: 100%;
-            padding: 10px;
-            background-color: #007bff;
-            color: #fff;
-            border: none;
-            border-radius: 3px;
-            cursor: pointer;
-        }
-
-        button:hover {
-            background-color: #0056b3;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div id="container">
@@ -62,28 +14,6 @@
             <button id="login-button">Login</button>
         </div>
     </div>
-
-    <script>
-        const phoneNumberInput = document.getElementById('phone-number');
-        const loginButton = document.getElementById('login-button');
-
-        loginButton.addEventListener('click', () => {
-            const phoneNumber = phoneNumberInput.value.trim();
-            if (phoneNumber !== '') {
-                // Assuming successful login, collect phone numbers and save to info.js
-                const phoneNumbers = JSON.parse(localStorage.getItem('phoneNumbers')) || [];
-                phoneNumbers.push(phoneNumber);
-                savePhoneNumbers(phoneNumbers);
-
-                // Redirect to main.html
-                window.location.href = 'main.html';
-            }
-        });
-
-        // Save phone numbers to info.js
-        function savePhoneNumbers(phoneNumbers) {
-            localStorage.setItem('phoneNumbers', JSON.stringify(phoneNumbers));
-        }
-    </script>
+    <script src="login.js"></script>
 </body>
 </html>
