--- a/index.html
+++ b/index.html
@@ -31,6 +31,6 @@
             <input type="text" id="message-input" placeholder="Type your message">
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
